[[bin]]
name = 'two-sum'
path = 'src/0001.two-sum/solution.rs'

[[bin]]
name = 'add-two-numbers'
path = 'src/0002.add-two-numbers/solution.rs'

[[bin]]
name = 'longest-substring-without-repeating-characters'
path = 'src/0003.longest-substring-without-repeating-characters/solution.rs'

[[bin]]
name = 'median-of-two-sorted-arrays'
path = 'src/0004.median-of-two-sorted-arrays/solution.rs'

[[bin]]
name = 'longest-palindromic-substring'
path = 'src/0005.longest-palindromic-substring/solution.rs'

[[bin]]
name = 'zigzag-conversion'
path = 'src/0006.zigzag-conversion/solution.rs'

[[bin]]
name = 'reverse-integer'
path = 'src/0007.reverse-integer/solution.rs'

[[bin]]
name = 'string-to-integer-atoi'
path = 'src/0008.string-to-integer-atoi/solution.rs'

[[bin]]
name = 'palindrome-number'
path = 'src/0009.palindrome-number/solution.rs'

[[bin]]
name = 'regular-expression-matching'
path = 'src/0010.regular-expression-matching/solution.rs'

[[bin]]
name = 'container-with-most-water'
path = 'src/0011.container-with-most-water/solution.rs'

[[bin]]
name = 'integer-to-roman'
path = 'src/0012.integer-to-roman/solution.rs'

[[bin]]
name = 'roman-to-integer'
path = 'src/0013.roman-to-integer/solution.rs'

[[bin]]
name = 'longest-common-prefix'
path = 'src/0014.longest-common-prefix/solution.rs'

[[bin]]
name = '3sum'
path = 'src/0015.3sum/solution.rs'

[[bin]]
name = '3sum-closest'
path = 'src/0016.3sum-closest/solution.rs'

[[bin]]
name = 'letter-combinations-of-a-phone-number'
path = 'src/0017.letter-combinations-of-a-phone-number/solution.rs'

[[bin]]
name = '4sum'
path = 'src/0018.4sum/solution.rs'

[[bin]]
name = 'remove-nth-node-from-end-of-list'
path = 'src/0019.remove-nth-node-from-end-of-list/solution.rs'

[[bin]]
name = 'valid-parentheses'
path = 'src/0020.valid-parentheses/solution.rs'

[[bin]]
name = 'merge-two-sorted-lists'
path = 'src/0021.merge-two-sorted-lists/solution.rs'

[[bin]]
name = 'generate-parentheses'
path = 'src/0022.generate-parentheses/solution.rs'

[[bin]]
name = 'merge-k-sorted-lists'
path = 'src/0023.merge-k-sorted-lists/solution.rs'

[[bin]]
name = 'swap-nodes-in-pairs'
path = 'src/0024.swap-nodes-in-pairs/solution.rs'

[[bin]]
name = 'reverse-nodes-in-k-group'
path = 'src/0025.reverse-nodes-in-k-group/solution.rs'

[[bin]]
name = 'remove-duplicates-from-sorted-array'
path = 'src/0026.remove-duplicates-from-sorted-array/solution.rs'

[[bin]]
name = 'remove-element'
path = 'src/0027.remove-element/solution.rs'

[[bin]]
name = 'find-the-index-of-the-first-occurrence-in-a-string'
path = 'src/0028.find-the-index-of-the-first-occurrence-in-a-string/solution.rs'

[[bin]]
name = 'divide-two-integers'
path = 'src/0029.divide-two-integers/solution.rs'

[[bin]]
name = 'substring-with-concatenation-of-all-words'
path = 'src/0030.substring-with-concatenation-of-all-words/solution.rs'

[[bin]]
name = 'next-permutation'
path = 'src/0031.next-permutation/solution.rs'

[[bin]]
name = 'longest-valid-parentheses'
path = 'src/0032.longest-valid-parentheses/solution.rs'

[[bin]]
name = 'search-in-rotated-sorted-array'
path = 'src/0033.search-in-rotated-sorted-array/solution.rs'

[[bin]]
name = 'find-first-and-last-position-of-element-in-sorted-array'
path = 'src/0034.find-first-and-last-position-of-element-in-sorted-array/solution.rs'

[[bin]]
name = 'search-insert-position'
path = 'src/0035.search-insert-position/solution.rs'

[[bin]]
name = 'valid-sudoku'
path = 'src/0036.valid-sudoku/solution.rs'

[dependencies]
anyhow = '1.0.79'
leetgo-rs = '0.2.1'
serde = '1.0.196'
serde_json = '1.0.113'

[package]
edition = '2024'
name = 'leetcode-solutions'
version = '0.1.0'
