[[bin]]
name = 'two-sum'
path = 'src/0001.two-sum/solution.rs'

[[bin]]
name = 'add-two-numbers'
path = 'src/0002.add-two-numbers/solution.rs'

[[bin]]
name = 'longest-substring-without-repeating-characters'
path = 'src/0003.longest-substring-without-repeating-characters/solution.rs'

[[bin]]
name = 'median-of-two-sorted-arrays'
path = 'src/0004.median-of-two-sorted-arrays/solution.rs'

[[bin]]
name = 'longest-palindromic-substring'
path = 'src/0005.longest-palindromic-substring/solution.rs'

[[bin]]
name = 'zigzag-conversion'
path = 'src/0006.zigzag-conversion/solution.rs'

[[bin]]
name = 'reverse-integer'
path = 'src/0007.reverse-integer/solution.rs'

[[bin]]
name = 'string-to-integer-atoi'
path = 'src/0008.string-to-integer-atoi/solution.rs'

[[bin]]
name = 'palindrome-number'
path = 'src/0009.palindrome-number/solution.rs'

[[bin]]
name = 'regular-expression-matching'
path = 'src/0010.regular-expression-matching/solution.rs'

[[bin]]
name = 'container-with-most-water'
path = 'src/0011.container-with-most-water/solution.rs'

[[bin]]
name = 'integer-to-roman'
path = 'src/0012.integer-to-roman/solution.rs'

[[bin]]
name = 'roman-to-integer'
path = 'src/0013.roman-to-integer/solution.rs'

[[bin]]
name = 'longest-common-prefix'
path = 'src/0014.longest-common-prefix/solution.rs'

[[bin]]
name = '3sum'
path = 'src/0015.3sum/solution.rs'

[[bin]]
name = '3sum-closest'
path = 'src/0016.3sum-closest/solution.rs'

[[bin]]
name = 'letter-combinations-of-a-phone-number'
path = 'src/0017.letter-combinations-of-a-phone-number/solution.rs'

[[bin]]
name = '4sum'
path = 'src/0018.4sum/solution.rs'

[[bin]]
name = 'remove-nth-node-from-end-of-list'
path = 'src/0019.remove-nth-node-from-end-of-list/solution.rs'

[[bin]]
name = 'valid-parentheses'
path = 'src/0020.valid-parentheses/solution.rs'

[[bin]]
name = 'merge-two-sorted-lists'
path = 'src/0021.merge-two-sorted-lists/solution.rs'

[[bin]]
name = 'generate-parentheses'
path = 'src/0022.generate-parentheses/solution.rs'

[[bin]]
name = 'merge-k-sorted-lists'
path = 'src/0023.merge-k-sorted-lists/solution.rs'

[[bin]]
name = 'swap-nodes-in-pairs'
path = 'src/0024.swap-nodes-in-pairs/solution.rs'

[[bin]]
name = 'reverse-nodes-in-k-group'
path = 'src/0025.reverse-nodes-in-k-group/solution.rs'

[[bin]]
name = 'remove-duplicates-from-sorted-array'
path = 'src/0026.remove-duplicates-from-sorted-array/solution.rs'

[[bin]]
name = 'remove-element'
path = 'src/0027.remove-element/solution.rs'

[[bin]]
name = 'find-the-index-of-the-first-occurrence-in-a-string'
path = 'src/0028.find-the-index-of-the-first-occurrence-in-a-string/solution.rs'

[[bin]]
name = 'divide-two-integers'
path = 'src/0029.divide-two-integers/solution.rs'

[[bin]]
name = 'substring-with-concatenation-of-all-words'
path = 'src/0030.substring-with-concatenation-of-all-words/solution.rs'

[[bin]]
name = 'next-permutation'
path = 'src/0031.next-permutation/solution.rs'

[[bin]]
name = 'longest-valid-parentheses'
path = 'src/0032.longest-valid-parentheses/solution.rs'

[[bin]]
name = 'search-in-rotated-sorted-array'
path = 'src/0033.search-in-rotated-sorted-array/solution.rs'

[[bin]]
name = 'find-first-and-last-position-of-element-in-sorted-array'
path = 'src/0034.find-first-and-last-position-of-element-in-sorted-array/solution.rs'

[[bin]]
name = 'search-insert-position'
path = 'src/0035.search-insert-position/solution.rs'

[[bin]]
name = 'valid-sudoku'
path = 'src/0036.valid-sudoku/solution.rs'

[[bin]]
name = 'sudoku-solver'
path = 'src/0037.sudoku-solver/solution.rs'

[[bin]]
name = 'count-and-say'
path = 'src/0038.count-and-say/solution.rs'

[[bin]]
name = 'combination-sum'
path = 'src/0039.combination-sum/solution.rs'

[[bin]]
name = 'combination-sum-ii'
path = 'src/0040.combination-sum-ii/solution.rs'

[[bin]]
name = 'first-missing-positive'
path = 'src/0041.first-missing-positive/solution.rs'

[[bin]]
name = 'trapping-rain-water'
path = 'src/0042.trapping-rain-water/solution.rs'

[[bin]]
name = 'multiply-strings'
path = 'src/0043.multiply-strings/solution.rs'

[[bin]]
name = 'wildcard-matching'
path = 'src/0044.wildcard-matching/solution.rs'

[[bin]]
name = 'jump-game-ii'
path = 'src/0045.jump-game-ii/solution.rs'

[[bin]]
name = 'permutations'
path = 'src/0046.permutations/solution.rs'

[[bin]]
name = 'permutations-ii'
path = 'src/0047.permutations-ii/solution.rs'

[[bin]]
name = 'rotate-image'
path = 'src/0048.rotate-image/solution.rs'

[[bin]]
name = 'group-anagrams'
path = 'src/0049.group-anagrams/solution.rs'

[[bin]]
name = 'powx-n'
path = 'src/0050.powx-n/solution.rs'

[[bin]]
name = 'n-queens'
path = 'src/0051.n-queens/solution.rs'

[[bin]]
name = 'n-queens-ii'
path = 'src/0052.n-queens-ii/solution.rs'

[[bin]]
name = 'maximum-subarray'
path = 'src/0053.maximum-subarray/solution.rs'

[[bin]]
name = 'spiral-matrix'
path = 'src/0054.spiral-matrix/solution.rs'

[[bin]]
name = 'jump-game'
path = 'src/0055.jump-game/solution.rs'

[[bin]]
name = 'merge-intervals'
path = 'src/0056.merge-intervals/solution.rs'

[[bin]]
name = 'insert-interval'
path = 'src/0057.insert-interval/solution.rs'

[[bin]]
name = 'length-of-last-word'
path = 'src/0058.length-of-last-word/solution.rs'

[[bin]]
name = 'spiral-matrix-ii'
path = 'src/0059.spiral-matrix-ii/solution.rs'

[[bin]]
name = 'permutation-sequence'
path = 'src/0060.permutation-sequence/solution.rs'

[dependencies]
anyhow = '1.0.79'
leetgo-rs = '0.2.1'
serde = '1.0.196'
serde_json = '1.0.113'

[package]
edition = '2024'
name = 'leetcode-solutions'
version = '0.1.0'
