[[bin]]
name = 'two-sum'
path = 'src/0001.two-sum/solution.rs'

[[bin]]
name = 'add-two-numbers'
path = 'src/0002.add-two-numbers/solution.rs'

[[bin]]
name = 'longest-substring-without-repeating-characters'
path = 'src/0003.longest-substring-without-repeating-characters/solution.rs'

[[bin]]
name = 'median-of-two-sorted-arrays'
path = 'src/0004.median-of-two-sorted-arrays/solution.rs'

[[bin]]
name = 'longest-palindromic-substring'
path = 'src/0005.longest-palindromic-substring/solution.rs'

[[bin]]
name = 'zigzag-conversion'
path = 'src/0006.zigzag-conversion/solution.rs'

[[bin]]
name = 'reverse-integer'
path = 'src/0007.reverse-integer/solution.rs'

[[bin]]
name = 'string-to-integer-atoi'
path = 'src/0008.string-to-integer-atoi/solution.rs'

[[bin]]
name = 'palindrome-number'
path = 'src/0009.palindrome-number/solution.rs'

[[bin]]
name = 'regular-expression-matching'
path = 'src/0010.regular-expression-matching/solution.rs'

[[bin]]
name = 'container-with-most-water'
path = 'src/0011.container-with-most-water/solution.rs'

[[bin]]
name = 'integer-to-roman'
path = 'src/0012.integer-to-roman/solution.rs'

[[bin]]
name = 'roman-to-integer'
path = 'src/0013.roman-to-integer/solution.rs'

[[bin]]
name = 'longest-common-prefix'
path = 'src/0014.longest-common-prefix/solution.rs'

[[bin]]
name = '3sum'
path = 'src/0015.3sum/solution.rs'

[[bin]]
name = '3sum-closest'
path = 'src/0016.3sum-closest/solution.rs'

[[bin]]
name = 'letter-combinations-of-a-phone-number'
path = 'src/0017.letter-combinations-of-a-phone-number/solution.rs'

[[bin]]
name = '4sum'
path = 'src/0018.4sum/solution.rs'

[[bin]]
name = 'remove-nth-node-from-end-of-list'
path = 'src/0019.remove-nth-node-from-end-of-list/solution.rs'

[[bin]]
name = 'valid-parentheses'
path = 'src/0020.valid-parentheses/solution.rs'

[[bin]]
name = 'merge-two-sorted-lists'
path = 'src/0021.merge-two-sorted-lists/solution.rs'

[[bin]]
name = 'generate-parentheses'
path = 'src/0022.generate-parentheses/solution.rs'

[[bin]]
name = 'merge-k-sorted-lists'
path = 'src/0023.merge-k-sorted-lists/solution.rs'

[[bin]]
name = 'swap-nodes-in-pairs'
path = 'src/0024.swap-nodes-in-pairs/solution.rs'

[[bin]]
name = 'reverse-nodes-in-k-group'
path = 'src/0025.reverse-nodes-in-k-group/solution.rs'

[[bin]]
name = 'remove-duplicates-from-sorted-array'
path = 'src/0026.remove-duplicates-from-sorted-array/solution.rs'

[[bin]]
name = 'remove-element'
path = 'src/0027.remove-element/solution.rs'

[[bin]]
name = 'find-the-index-of-the-first-occurrence-in-a-string'
path = 'src/0028.find-the-index-of-the-first-occurrence-in-a-string/solution.rs'

[[bin]]
name = 'divide-two-integers'
path = 'src/0029.divide-two-integers/solution.rs'

[[bin]]
name = 'substring-with-concatenation-of-all-words'
path = 'src/0030.substring-with-concatenation-of-all-words/solution.rs'

[[bin]]
name = 'next-permutation'
path = 'src/0031.next-permutation/solution.rs'

[[bin]]
name = 'longest-valid-parentheses'
path = 'src/0032.longest-valid-parentheses/solution.rs'

[[bin]]
name = 'search-in-rotated-sorted-array'
path = 'src/0033.search-in-rotated-sorted-array/solution.rs'

[[bin]]
name = 'find-first-and-last-position-of-element-in-sorted-array'
path = 'src/0034.find-first-and-last-position-of-element-in-sorted-array/solution.rs'

[[bin]]
name = 'search-insert-position'
path = 'src/0035.search-insert-position/solution.rs'

[[bin]]
name = 'valid-sudoku'
path = 'src/0036.valid-sudoku/solution.rs'

[[bin]]
name = 'sudoku-solver'
path = 'src/0037.sudoku-solver/solution.rs'

[[bin]]
name = 'count-and-say'
path = 'src/0038.count-and-say/solution.rs'

[[bin]]
name = 'combination-sum'
path = 'src/0039.combination-sum/solution.rs'

[[bin]]
name = 'combination-sum-ii'
path = 'src/0040.combination-sum-ii/solution.rs'

[[bin]]
name = 'first-missing-positive'
path = 'src/0041.first-missing-positive/solution.rs'

[[bin]]
name = 'trapping-rain-water'
path = 'src/0042.trapping-rain-water/solution.rs'

[[bin]]
name = 'multiply-strings'
path = 'src/0043.multiply-strings/solution.rs'

[[bin]]
name = 'wildcard-matching'
path = 'src/0044.wildcard-matching/solution.rs'

[[bin]]
name = 'jump-game-ii'
path = 'src/0045.jump-game-ii/solution.rs'

[[bin]]
name = 'permutations'
path = 'src/0046.permutations/solution.rs'

[[bin]]
name = 'permutations-ii'
path = 'src/0047.permutations-ii/solution.rs'

[[bin]]
name = 'rotate-image'
path = 'src/0048.rotate-image/solution.rs'

[[bin]]
name = 'group-anagrams'
path = 'src/0049.group-anagrams/solution.rs'

[[bin]]
name = 'powx-n'
path = 'src/0050.powx-n/solution.rs'

[[bin]]
name = 'n-queens'
path = 'src/0051.n-queens/solution.rs'

[[bin]]
name = 'n-queens-ii'
path = 'src/0052.n-queens-ii/solution.rs'

[[bin]]
name = 'maximum-subarray'
path = 'src/0053.maximum-subarray/solution.rs'

[[bin]]
name = 'spiral-matrix'
path = 'src/0054.spiral-matrix/solution.rs'

[[bin]]
name = 'jump-game'
path = 'src/0055.jump-game/solution.rs'

[[bin]]
name = 'merge-intervals'
path = 'src/0056.merge-intervals/solution.rs'

[[bin]]
name = 'insert-interval'
path = 'src/0057.insert-interval/solution.rs'

[[bin]]
name = 'length-of-last-word'
path = 'src/0058.length-of-last-word/solution.rs'

[[bin]]
name = 'spiral-matrix-ii'
path = 'src/0059.spiral-matrix-ii/solution.rs'

[[bin]]
name = 'permutation-sequence'
path = 'src/0060.permutation-sequence/solution.rs'

[[bin]]
name = 'rotate-list'
path = 'src/0061.rotate-list/solution.rs'

[[bin]]
name = 'unique-paths'
path = 'src/0062.unique-paths/solution.rs'

[[bin]]
name = 'unique-paths-ii'
path = 'src/0063.unique-paths-ii/solution.rs'

[[bin]]
name = 'minimum-path-sum'
path = 'src/0064.minimum-path-sum/solution.rs'

[[bin]]
name = 'valid-number'
path = 'src/0065.valid-number/solution.rs'

[[bin]]
name = 'plus-one'
path = 'src/0066.plus-one/solution.rs'

[[bin]]
name = 'add-binary'
path = 'src/0067.add-binary/solution.rs'

[[bin]]
name = 'text-justification'
path = 'src/0068.text-justification/solution.rs'

[[bin]]
name = 'sqrtx'
path = 'src/0069.sqrtx/solution.rs'

[[bin]]
name = 'climbing-stairs'
path = 'src/0070.climbing-stairs/solution.rs'

[[bin]]
name = 'simplify-path'
path = 'src/0071.simplify-path/solution.rs'

[[bin]]
name = 'edit-distance'
path = 'src/0072.edit-distance/solution.rs'

[[bin]]
name = 'set-matrix-zeroes'
path = 'src/0073.set-matrix-zeroes/solution.rs'

[[bin]]
name = 'search-a-2d-matrix'
path = 'src/0074.search-a-2d-matrix/solution.rs'

[[bin]]
name = 'sort-colors'
path = 'src/0075.sort-colors/solution.rs'

[[bin]]
name = 'minimum-window-substring'
path = 'src/0076.minimum-window-substring/solution.rs'

[[bin]]
name = 'combinations'
path = 'src/0077.combinations/solution.rs'

[[bin]]
name = 'subsets'
path = 'src/0078.subsets/solution.rs'

[[bin]]
name = 'word-search'
path = 'src/0079.word-search/solution.rs'

[[bin]]
name = 'remove-duplicates-from-sorted-array-ii'
path = 'src/0080.remove-duplicates-from-sorted-array-ii/solution.rs'

[[bin]]
name = 'search-in-rotated-sorted-array-ii'
path = 'src/0081.search-in-rotated-sorted-array-ii/solution.rs'

[[bin]]
name = 'remove-duplicates-from-sorted-list-ii'
path = 'src/0082.remove-duplicates-from-sorted-list-ii/solution.rs'

[[bin]]
name = 'remove-duplicates-from-sorted-list'
path = 'src/0083.remove-duplicates-from-sorted-list/solution.rs'

[[bin]]
name = 'largest-rectangle-in-histogram'
path = 'src/0084.largest-rectangle-in-histogram/solution.rs'

[[bin]]
name = 'maximal-rectangle'
path = 'src/0085.maximal-rectangle/solution.rs'

[[bin]]
name = 'partition-list'
path = 'src/0086.partition-list/solution.rs'

[[bin]]
name = 'scramble-string'
path = 'src/0087.scramble-string/solution.rs'

[[bin]]
name = 'merge-sorted-array'
path = 'src/0088.merge-sorted-array/solution.rs'

[[bin]]
name = 'gray-code'
path = 'src/0089.gray-code/solution.rs'

[[bin]]
name = 'subsets-ii'
path = 'src/0090.subsets-ii/solution.rs'

[[bin]]
name = 'decode-ways'
path = 'src/0091.decode-ways/solution.rs'

[[bin]]
name = 'reverse-linked-list-ii'
path = 'src/0092.reverse-linked-list-ii/solution.rs'

[[bin]]
name = 'restore-ip-addresses'
path = 'src/0093.restore-ip-addresses/solution.rs'

[[bin]]
name = 'binary-tree-inorder-traversal'
path = 'src/0094.binary-tree-inorder-traversal/solution.rs'

[[bin]]
name = 'unique-binary-search-trees-ii'
path = 'src/0095.unique-binary-search-trees-ii/solution.rs'

[[bin]]
name = 'unique-binary-search-trees'
path = 'src/0096.unique-binary-search-trees/solution.rs'

[[bin]]
name = 'interleaving-string'
path = 'src/0097.interleaving-string/solution.rs'

[[bin]]
name = 'validate-binary-search-tree'
path = 'src/0098.validate-binary-search-tree/solution.rs'

[[bin]]
name = 'recover-binary-search-tree'
path = 'src/0099.recover-binary-search-tree/solution.rs'

[[bin]]
name = 'same-tree'
path = 'src/0100.same-tree/solution.rs'

[[bin]]
name = 'symmetric-tree'
path = 'src/0101.symmetric-tree/solution.rs'

[[bin]]
name = 'binary-tree-level-order-traversal'
path = 'src/0102.binary-tree-level-order-traversal/solution.rs'

[[bin]]
name = 'binary-tree-zigzag-level-order-traversal'
path = 'src/0103.binary-tree-zigzag-level-order-traversal/solution.rs'

[[bin]]
name = 'maximum-depth-of-binary-tree'
path = 'src/0104.maximum-depth-of-binary-tree/solution.rs'

[[bin]]
name = 'construct-binary-tree-from-preorder-and-inorder-traversal'
path = 'src/0105.construct-binary-tree-from-preorder-and-inorder-traversal/solution.rs'

[[bin]]
name = 'construct-binary-tree-from-inorder-and-postorder-traversal'
path = 'src/0106.construct-binary-tree-from-inorder-and-postorder-traversal/solution.rs'

[[bin]]
name = 'binary-tree-level-order-traversal-ii'
path = 'src/0107.binary-tree-level-order-traversal-ii/solution.rs'

[[bin]]
name = 'convert-sorted-array-to-binary-search-tree'
path = 'src/0108.convert-sorted-array-to-binary-search-tree/solution.rs'

[[bin]]
name = 'convert-sorted-list-to-binary-search-tree'
path = 'src/0109.convert-sorted-list-to-binary-search-tree/solution.rs'

[[bin]]
name = 'balanced-binary-tree'
path = 'src/0110.balanced-binary-tree/solution.rs'

[[bin]]
name = 'minimum-depth-of-binary-tree'
path = 'src/0111.minimum-depth-of-binary-tree/solution.rs'

[[bin]]
name = 'path-sum'
path = 'src/0112.path-sum/solution.rs'

[[bin]]
name = 'path-sum-ii'
path = 'src/0113.path-sum-ii/solution.rs'

[[bin]]
name = 'flatten-binary-tree-to-linked-list'
path = 'src/0114.flatten-binary-tree-to-linked-list/solution.rs'

[[bin]]
name = 'distinct-subsequences'
path = 'src/0115.distinct-subsequences/solution.rs'

[[bin]]
name = 'pascals-triangle'
path = 'src/0118.pascals-triangle/solution.rs'

[[bin]]
name = 'pascals-triangle-ii'
path = 'src/0119.pascals-triangle-ii/solution.rs'

[[bin]]
name = 'triangle'
path = 'src/0120.triangle/solution.rs'

[[bin]]
name = 'best-time-to-buy-and-sell-stock'
path = 'src/0121.best-time-to-buy-and-sell-stock/solution.rs'

[[bin]]
name = 'best-time-to-buy-and-sell-stock-ii'
path = 'src/0122.best-time-to-buy-and-sell-stock-ii/solution.rs'

[[bin]]
name = 'best-time-to-buy-and-sell-stock-iii'
path = 'src/0123.best-time-to-buy-and-sell-stock-iii/solution.rs'

[[bin]]
name = 'binary-tree-maximum-path-sum'
path = 'src/0124.binary-tree-maximum-path-sum/solution.rs'

[[bin]]
name = 'valid-palindrome'
path = 'src/0125.valid-palindrome/solution.rs'

[[bin]]
name = 'word-ladder-ii'
path = 'src/0126.word-ladder-ii/solution.rs'

[[bin]]
name = 'word-ladder'
path = 'src/0127.word-ladder/solution.rs'

[[bin]]
name = 'longest-consecutive-sequence'
path = 'src/0128.longest-consecutive-sequence/solution.rs'

[[bin]]
name = 'sum-root-to-leaf-numbers'
path = 'src/0129.sum-root-to-leaf-numbers/solution.rs'

[[bin]]
name = 'surrounded-regions'
path = 'src/0130.surrounded-regions/solution.rs'

[[bin]]
name = 'palindrome-partitioning'
path = 'src/0131.palindrome-partitioning/solution.rs'

[[bin]]
name = 'palindrome-partitioning-ii'
path = 'src/0132.palindrome-partitioning-ii/solution.rs'

[[bin]]
name = 'gas-station'
path = 'src/0134.gas-station/solution.rs'

[[bin]]
name = 'candy'
path = 'src/0135.candy/solution.rs'

[[bin]]
name = 'single-number'
path = 'src/0136.single-number/solution.rs'

[[bin]]
name = 'single-number-ii'
path = 'src/0137.single-number-ii/solution.rs'

[[bin]]
name = 'word-break'
path = 'src/0139.word-break/solution.rs'

[[bin]]
name = 'word-break-ii'
path = 'src/0140.word-break-ii/solution.rs'

[[bin]]
name = 'reorder-list'
path = 'src/0143.reorder-list/solution.rs'

[[bin]]
name = 'binary-tree-preorder-traversal'
path = 'src/0144.binary-tree-preorder-traversal/solution.rs'

[[bin]]
name = 'binary-tree-postorder-traversal'
path = 'src/0145.binary-tree-postorder-traversal/solution.rs'

[[bin]]
name = 'lru-cache'
path = 'src/0146.lru-cache/solution.rs'

[[bin]]
name = 'insertion-sort-list'
path = 'src/0147.insertion-sort-list/solution.rs'

[[bin]]
name = 'sort-list'
path = 'src/0148.sort-list/solution.rs'

[[bin]]
name = 'max-points-on-a-line'
path = 'src/0149.max-points-on-a-line/solution.rs'

[[bin]]
name = 'evaluate-reverse-polish-notation'
path = 'src/0150.evaluate-reverse-polish-notation/solution.rs'

[[bin]]
name = 'reverse-words-in-a-string'
path = 'src/0151.reverse-words-in-a-string/solution.rs'

[[bin]]
name = 'maximum-product-subarray'
path = 'src/0152.maximum-product-subarray/solution.rs'

[[bin]]
name = 'find-minimum-in-rotated-sorted-array'
path = 'src/0153.find-minimum-in-rotated-sorted-array/solution.rs'

[[bin]]
name = 'find-minimum-in-rotated-sorted-array-ii'
path = 'src/0154.find-minimum-in-rotated-sorted-array-ii/solution.rs'

[[bin]]
name = 'min-stack'
path = 'src/0155.min-stack/solution.rs'

[[bin]]
name = 'find-peak-element'
path = 'src/0162.find-peak-element/solution.rs'

[[bin]]
name = 'maximum-gap'
path = 'src/0164.maximum-gap/solution.rs'

[[bin]]
name = 'compare-version-numbers'
path = 'src/0165.compare-version-numbers/solution.rs'

[[bin]]
name = 'fraction-to-recurring-decimal'
path = 'src/0166.fraction-to-recurring-decimal/solution.rs'

[[bin]]
name = 'two-sum-ii-input-array-is-sorted'
path = 'src/0167.two-sum-ii-input-array-is-sorted/solution.rs'

[[bin]]
name = 'excel-sheet-column-title'
path = 'src/0168.excel-sheet-column-title/solution.rs'

[[bin]]
name = 'majority-element'
path = 'src/0169.majority-element/solution.rs'

[[bin]]
name = 'excel-sheet-column-number'
path = 'src/0171.excel-sheet-column-number/solution.rs'

[[bin]]
name = 'factorial-trailing-zeroes'
path = 'src/0172.factorial-trailing-zeroes/solution.rs'

[[bin]]
name = 'binary-search-tree-iterator'
path = 'src/0173.binary-search-tree-iterator/solution.rs'

[[bin]]
name = 'dungeon-game'
path = 'src/0174.dungeon-game/solution.rs'

[[bin]]
name = 'largest-number'
path = 'src/0179.largest-number/solution.rs'

[[bin]]
name = 'repeated-dna-sequences'
path = 'src/0187.repeated-dna-sequences/solution.rs'

[[bin]]
name = 'best-time-to-buy-and-sell-stock-iv'
path = 'src/0188.best-time-to-buy-and-sell-stock-iv/solution.rs'

[[bin]]
name = 'rotate-array'
path = 'src/0189.rotate-array/solution.rs'

[[bin]]
name = 'reverse-bits'
path = 'src/0190.reverse-bits/solution.rs'

[[bin]]
name = 'number-of-1-bits'
path = 'src/0191.number-of-1-bits/solution.rs'

[[bin]]
name = 'house-robber'
path = 'src/0198.house-robber/solution.rs'

[[bin]]
name = 'binary-tree-right-side-view'
path = 'src/0199.binary-tree-right-side-view/solution.rs'

[[bin]]
name = 'number-of-islands'
path = 'src/0200.number-of-islands/solution.rs'

[[bin]]
name = 'bitwise-and-of-numbers-range'
path = 'src/0201.bitwise-and-of-numbers-range/solution.rs'

[[bin]]
name = 'happy-number'
path = 'src/0202.happy-number/solution.rs'

[[bin]]
name = 'remove-linked-list-elements'
path = 'src/0203.remove-linked-list-elements/solution.rs'

[[bin]]
name = 'count-primes'
path = 'src/0204.count-primes/solution.rs'

[[bin]]
name = 'isomorphic-strings'
path = 'src/0205.isomorphic-strings/solution.rs'

[[bin]]
name = 'reverse-linked-list'
path = 'src/0206.reverse-linked-list/solution.rs'

[[bin]]
name = 'course-schedule'
path = 'src/0207.course-schedule/solution.rs'

[[bin]]
name = 'implement-trie-prefix-tree'
path = 'src/0208.implement-trie-prefix-tree/solution.rs'

[[bin]]
name = 'minimum-size-subarray-sum'
path = 'src/0209.minimum-size-subarray-sum/solution.rs'

[[bin]]
name = 'course-schedule-ii'
path = 'src/0210.course-schedule-ii/solution.rs'

[[bin]]
name = 'design-add-and-search-words-data-structure'
path = 'src/0211.design-add-and-search-words-data-structure/solution.rs'

[[bin]]
name = 'word-search-ii'
path = 'src/0212.word-search-ii/solution.rs'

[[bin]]
name = 'house-robber-ii'
path = 'src/0213.house-robber-ii/solution.rs'

[[bin]]
name = 'shortest-palindrome'
path = 'src/0214.shortest-palindrome/solution.rs'

[[bin]]
name = 'kth-largest-element-in-an-array'
path = 'src/0215.kth-largest-element-in-an-array/solution.rs'

[[bin]]
name = 'combination-sum-iii'
path = 'src/0216.combination-sum-iii/solution.rs'

[[bin]]
name = 'contains-duplicate'
path = 'src/0217.contains-duplicate/solution.rs'

[[bin]]
name = 'the-skyline-problem'
path = 'src/0218.the-skyline-problem/solution.rs'

[[bin]]
name = 'contains-duplicate-ii'
path = 'src/0219.contains-duplicate-ii/solution.rs'

[[bin]]
name = 'contains-duplicate-iii'
path = 'src/0220.contains-duplicate-iii/solution.rs'

[dependencies]
anyhow = '1.0.79'
leetgo-rs = '0.2.1'
serde = '1.0.196'
serde_json = '1.0.113'

[package]
edition = '2024'
name = 'leetcode-solutions'
version = '0.1.0'
